# FastAPI-archetype

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 001_initial_migration.py
app/: main.py
app/core/: config.py
app/db/: models.py  session.py
app/routers/: users.py
app/services/: item_service.py  user_service.py
src/app/: main.py
src/app/core/: logging_config.py
src/app/db/: session.py
src/app/db/models/: __init__.py  item.py  user.py
src/app/routers/: items.py
src/app/services/: user_service.py
tests/: test_example.py
